--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -87,7 +87,7 @@
                     </div>
 
                 </form>
-
+                <a th:href="@{/register/showRegistrationForm}" class="btn btn-primary" role="button" aria-pressed="true">Register New User</a>
             </div>
 
         </div>
