--- a/src/main/resources/templates/registration-form.html
+++ b/src/main/resources/templates/registration-form.html
@@ -70,6 +70,15 @@
                     </div>
 
 
+                    <!-- Roles -->
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <select th:field="*{formRole}" items="${roles}" class="form-control" >
+                            <option th:each="i : ${roles}" th:value="${i}" th:text="${i}">
+                            </option>
+                        </select>
+                    </div>
+
+
                     <!-- Password -->
                     <div style="margin-bottom: 25px" class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
