--- a/src/main/resources/templates/registration-complete.html
+++ b/src/main/resources/templates/registration-complete.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Registration Complete</title>
 </head>
 <body>
-Registration Complete
+
+
+<h2>User registered successfully! Please login in the Login page</h2>
+
+<a th:href="@{/showFormForLogin}">Back to Login Page</a>
+
+<hr>
 </body>
 </html>
