Added button to go back to login page

--- a/src/main/resources/templates/registration-form.html
+++ b/src/main/resources/templates/registration-form.html
@@ -149,6 +149,11 @@
                     </div>
 
                 </form>
+                <!-- Go back button -->
+                <form action="#" th:action="@{/showFormForLogin}"
+                      method="GET">
+                    <input type="submit" value="Back to Login" class="btn btn-outline-secondary mt-2" />
+                </form>
 
             </div>
 
